<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/balanceLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:background="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp"
            app:layout_constraintTop_toBottomOf="@+id/accountStr" />

        <TextView
            android:id="@+id/balanceTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="xxxx"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleBalance" />

        <TextView
            android:id="@+id/accountStr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/in_account_str"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/balanceTv" />

        <TextView
            android:id="@+id/titleBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/balance_title"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/line"
        app:layout_constraintTop_toBottomOf="@+id/balanceLayout"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>
    
    <TextView
        android:id="@+id/transactionTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/line"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/you_activity"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        app:layout_constraintTop_toBottomOf="@+id/transactionTv"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/makeTransfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginBottom="20dp"
        android:textSize="15dp"
        android:text="@string/make_transfer"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>